Implemented CSV file import algorithm for vocab database (WIP). CSV file can be read successfully, but cannot yet be mapped to in-app variables without error.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,9 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
 
+    //CSV file reader library - gradle kotlin DSL
+    implementation("com.github.doyaaaaaken:kotlin-csv-jvm:0.14.0")
+    //CSV file reader library - gradle groovy DSL
+    implementation 'com.github.doyaaaaaken:kotlin-csv-jvm:0.14.0'
+
 }
