--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LinguaSyne">
-        <activity android:name=".DisplayTerm"></activity>
-        <activity android:name=".HomeActivity" />
+        <activity android:name=".VocabSearch"></activity>
+        <activity
+            android:name=".DisplayTerm"
+            android:parentActivityName=".HomeActivity" />
+        <activity android:name=".HomeActivity"/>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
