Structure of classes and their relationships reworked so that UI elements and data elements are entirely independent of each other.
Search function now doesn't work in all cases, and launching the TermDisplayActivity from RecycleView onClick handler is still a WIP.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LinguaSyne">
-        <activity android:name=".VocabSearch"></activity>
+        <activity android:name=".VocabSearchActivity"></activity>
         <activity
             android:name=".DisplayTerm"
             android:parentActivityName=".HomeActivity" />
