--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,10 +60,10 @@ dependencies {
     //CSV file reader library - gradle groovy DSL
     implementation 'com.github.doyaaaaaken:kotlin-csv-jvm:0.14.0'
 
-//    implementation "com.xwray:groupie:2.8.1"
-//    implementation "com.xwray:groupie-kotlin-android-extensions:2.8.1"
-
     //RecyclerView
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    //CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
