--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LinguaSyne">
-        <activity android:name=".VocabSearchActivity"></activity>
+        <activity
+            android:name=".LessonActivity"
+            android:exported="false"
+            android:label="@string/title_activity_lesson"
+            android:theme="@style/Theme.LinguaSyne.NoActionBar" />
+        <activity android:name=".VocabSearchActivity" />
         <activity
             android:name=".DisplayTerm"
             android:parentActivityName=".HomeActivity" />
-        <activity android:name=".HomeActivity"/>
+        <activity android:name=".HomeActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
