Enabled revision session functionality. Issue with view null pointers (ReviewTermActivity.kt line 24) is being worked on.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,12 @@
         <activity
             android:name=".DisplayTerm"
             android:parentActivityName=".HomeActivity" />
+
         <activity android:name=".HomeActivity" />
+
+        <activity android:name=".ReviewTermActivity"
+            android:parentActivityName=".HomeActivity" />
+
         <activity android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
