--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/linguasyne_logo_shadow"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LinguaSyne">
+        android:theme="@style/Theme.LinguaSyne.NoActionBar">
 
         <activity android:name=".activities.StartActivity"
             android:exported="true">
