--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.linguasyne">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -7,9 +8,10 @@
     <application
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
-        android:icon="@drawable/linguasyne_logo_expanded"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/linguasyne_logo_shadow_expanded"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        tools:replace="android:icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.LinguaSyne.NoActionBar">
 
